kubernetes/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: er-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: er
      tier: backend
  template:
    metadata:
      labels:
        app: er
        tier: backend
    spec:
      volumes:
        - name: application-properties
          configMap:
            name: er-backend-config
      containers:
        - name: er-backend-pod
          image: daisukezr/erdiagram-simplified-backend:latest
          volumeMounts:
            - name: application-properties
              mountPath: /root/deployment/config/
