kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: er-frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: er
      tier: frontend
  template:
    metadata:
      labels:
        app: er
        tier: frontend
    spec:
      volumes:
        - name: env-local
          configMap:
            name: er-frontend-config
      containers:
        - name: er-backend-pod
          image: daisukezr/erdiagram-simplified-frontend:latest
          volumeMounts:
            - name: env-local
              mountPath: /root/workspace/.env.local
              subPath: .env.local
