kubernetes/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: er-backend-service
spec:
  type: ClusterIP
  selector:
    app: er
    tier: backend
  ports:
  - port: 8080
    targetPort: 8080
