kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: er-frontend-service
spec:
  type: NodePort
  selector:
    app: er
    tier: frontend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32002
