kubernetes/traefik_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: er-frontend-service
            port:
              number: 3000
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: er-backend-service
            port:
              number: 8080
